syntax = "proto3";

package projection;

message ProjectionContext {
  string eventType = 1;
  string eventId = 2;
  string stream = 3;
  string eventJson = 4;
}

message ResponseContext {
  string eventId = 1;
}

message Ignore {}

service Projection {
  rpc Project (stream ProjectionContext) returns (stream ProjectionResult);
}

message Execute {
  string sql = 1;
}

message ProjectionResult {
  ResponseContext context = 1;
  oneof operation {
    Ignore ignore = 2;
    Execute execute = 3;
  }
}
